--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,10 +5,17 @@ phases:
       php: 8.1
     commands:
       - echo "Installing dependencies..."
-      - apt-get update -y
-      - apt-get install -y zip unzip
+      - php -v
+      - amazon-linux-extras enable php8.1
+      - yum clean metadata
+      - yum install -y php php-cli php-mysqlnd php-zip php-gd php-mcrypt php-mbstring php-xml php-json
       - curl -sS https://getcomposer.org/installer | php
-      - php composer.phar install
+      - mv composer.phar /usr/local/bin/composer
+      - composer --version
+  pre_build:
+    commands:
+      - echo "Installing project dependencies..."
+      - composer install --no-dev --no-interaction --prefer-dist
   build:
     commands:
       - echo "Making scripts executable..."
