--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,9 +5,8 @@ phases:
       php: 8.1
     commands:
       - echo "Installing dependencies..."
-      - amazon-linux-extras enable php8.1
-      - yum clean metadata
-      - yum install -y php-cli php-common php-json php-process php-xml php-mysqlnd php-zip php-gd php-mbstring
+      - apt-get update
+      - apt-get install -y php8.1 php8.1-cli php8.1-common php8.1-mysql php8.1-zip php8.1-gd php8.1-mbstring php8.1-curl php8.1-xml php8.1-bcmath
       - php -v
       - curl -sS https://getcomposer.org/installer | php
       - mv composer.phar /usr/local/bin/composer
